--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,7 +14,7 @@ $bethel--blue: #0069aa;
 $bethel--navy: #0f2c52;
 $bethel--yellow: #ffc600;
 
-// $gotham-ssm: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans;
+$gotham-ssm: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans;
 $gotham: "Gotham A", "Gotham B", Helvetica, Arial, sans;
-// $sentinel: 'Sentinel A', 'Sentinel B', Georgia, serif;
+$sentinel: 'Sentinel A', 'Sentinel B', Georgia, serif;
 $sentinel-ssm: 'Sentinel SSm A', 'Sentinel SSm B', Georgia, serif;
