--- a/src/scss/enhance/_accordion.scss
+++ b/src/scss/enhance/_accordion.scss
@@ -29,14 +29,13 @@
     margin-top: 0;
     margin-left: -.95em;
     padding: .5em 1em .5em 0;
-    font-size: 14.4px;
-    font-size: 0.9rem;
+    // font-size: 14.4;
+    font-size: 0.8rem;
     list-style: none;
 }
 
 a.accordion-list__link {
     flex-grow: 1;
-    color: #757e8e;
     padding-right: 1em;
     margin-top: 0;
 }
