--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -8,6 +8,7 @@
 "base/base",
 "base/fluidity",
 "base/space",
+"base/tables",
 
 "typography/typography",
 
@@ -28,9 +29,14 @@
 
 "page/page__title",
 
-"enhance/buttons",
 "enhance/accordion",
+"enhance/big-steps",
+"enhance/buttons",
+"enhance/date-tag",
 "enhance/off-canvas",
+"enhance/proof-points",
+"enhance/quotes",
+"enhance/search",
 "../../../rex/src/scss/enhance/svg-icons",
 "../../../rex/src/scss/responsive/feature",
 // "enhance/image-hover" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
