--- a/src/templates/pages/off.hbs
+++ b/src/templates/pages/off.hbs
@@ -13,38 +13,140 @@ layout: default.hbs
             {{> page__title }}
 
             <div class="main">
+                <p>Bethel University is a top-ranked, evangelical Christian university based in St. Paul, Minnesota.</p>
+                <h2>Our Students</h2>
+                <p>With a total enrollment of 6,500 students, Bethel is the largest institution in the 13-member Christian College Consortium and among the top five in the 106-member Council for Christian Colleges and Universities. In recent years, our students have come from as many as 49 states and 23 countries, and have represented more than 65 Christian denominations.</p>
+                
+                <div class="event-feed-8922">
+                <div class="media-box  mv1">
+                    <span itemscope="itemscope" itemtype="http://schema.org/Event">
+                        <p class="events-date-tag">JAN<span>24</span>2015</p>
+                        <div class="media-box-body">
+                            <h2 class="h5"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></h2>
+                            <p><span itemprop="description">Explore majors andies to fulfilling careers.</span>
+                            </p>
+                        </div>
+                    </span>
+                </div>
+                <div class="media-box  mv1">
+                    <span itemscope="itemscope" itemtype="http://schema.org/Event">
+                        <p class="events-date-tag">JAN<span>24</span>2015</p>
+                        <div class="media-box-body">
+                            <h2 class="h5"><a href="http://bethel.edu/events/2015/options-in-health-sciences"><span itemprop="name">Options in Health Sciences</span></a></h2>
+                            <p class="mb0">10 a.m.</p>
+                            <p><span itemprop="description">Explore majors and learn more about Bethel’s opportunities in health sciences that lead to fulfilling careers.</span>
+                            </p>
+                        </div>
+                    </span>
+                </div>
+                </div>
 
-                <p>SQUIRE TRELAWNEY, Dr. Livesey, and the rest of these gentlemen having
-                asked me to write down the whole particulars about Treasure Island, from
-                the beginning to the end, keeping nothing back but the bearings of the
-                island, and that only because there is still treasure not yet lifted, I
-                take up my pen in the year of grace 17__ and go back to the time when
-                my father kept the Admiral Benbow inn and the brown old seaman with the
-                sabre cut first took up his lodging under our roof.</p>
-                <p>I remember him as if it were yesterday, as he came plodding to the
-                inn door, his sea-chest following behind him in a hand-barrow—a
-                tall, strong, heavy, nut-brown man, his tarry pigtail falling over the
-                shoulder of his soiled blue coat, his hands ragged and scarred, with
-                black, broken nails, and the sabre cut across one cheek, a dirty, livid
-                white. I remember him looking round the cover and whistling to himself
-                as he did so, and then breaking out in that old sea-song that he sang so
-                often afterwards:</p>
-                            <p>SQUIRE TRELAWNEY, Dr. Livesey, and the rest of these gentlemen having
-                asked me to write down the whole particulars about Treasure Island, from
-                the beginning to the end, keeping nothing back but the bearings of the
-                island, and that only because there is still treasure not yet lifted, I
-                take up my pen in the year of grace 17__ and go back to the time when
-                my father kept the Admiral Benbow inn and the brown old seaman with the
-                sabre cut first took up his lodging under our roof.</p>
-                <p>I remember him as if it were yesterday, as he came plodding to the
-                inn door, his sea-chest following behind him in a hand-barrow—a
-                tall, strong, heavy, nut-brown man, his tarry pigtail falling over the
-                shoulder of his soiled blue coat, his hands ragged and scarred, with
-                black, broken nails, and the sabre cut across one cheek, a dirty, livid
-                white. I remember him looking round the cover and whistling to himself
-                as he did so, and then breaking out in that old sea-song that he sang so
-                often afterwards:</p>
+                <h2>Our Campus</h2>
+                <p>The 110,000-square-foot Brushaber Commons (completed in March 2009) is the latest addition to our 245-acre lakeside campus in suburban Arden Hills, Minnesota, 20 minutes from downtown St. Paul and Minneapolis. The spacious, modern building houses a two-story dining center, a restaurant, coffee shop, expanded campus store, offices for student organizations, and a green roof.</p>
+                <h2>Religious Affiliation</h2>
+                <p>Bethel is sponsored by the churches of <a href="http://www.convergeworldwide.org/">Converge Worldwide</a>, although we serve students from more than 65 Christian denominations.</p>
+                <h2>Academics</h2>
+                <p>As a comprehensive liberal arts university including a seminary, we offer more than 100 different undergraduate and advanced degree programs through 4 different schools.</p>
+                <h3>College of Arts &amp; Sciences</h3>
+                <ul>
+                    <li><a href="http://cas.bethel.edu/academics/majors-minors">88 majors and 43 minors</a> in subjects as diverse and engaging as environmental studies, business, journalism, international relations, art, biochemistry/microbiology, athletic training, and engineering science</li>
+                    <li><a href="http://cas.bethel.edu/academics/preprofessional-programs/">11 pre-professional programs</a> in medicine, law, dentistry, veterinary science, physical therapy, pharmacy, and more</li>
+                    <li>Nearly 75% of our traditional undergrad students <a href="http://cas.bethel.edu/academics/study-abroad">study abroad</a> in more than 30 destinations</li>
+                </ul>
+                <h3>Graduate School</h3>
+                <ul>
+                    <li><a href="http://gs.bethel.edu/academics/masters/">11 master's degrees</a> including communication, education K-12, gerontology, business, nursing, organizational leadership, and more</li>
+                    <li>An <a href="http://gs.bethel.edu/academics/doctorate/educational-administration/">Ed.D. in Educational Leadership</a> with licensure options</li>
+                    <li><a href="http://gs.bethel.edu/academics/certificates/">Graduate certificate programs</a> in various education fields such as autism spectrum disorders, nursing education, and postsecondary teaching</li>
+                    <li>Graduate licenses in multiple education specialties including special education, reading, and worked-based learning</li>
+                </ul>
+                <h3>College of Adult &amp; Professional Studies</h3>
+                <ul>
+                    <li><a href="http://caps.bethel.edu/academics/bachelors/">Bachelor's degrees</a> in high-growth fields such as business management, communication studies, nursing (RN to B.S.), and organizational leadership</li>
+                    <li>An <a href="http://caps.bethel.edu/academics/associates/">associate degree</a> in general studies for first-time college students</li>
+                    <li><a href="http://caps.bethel.edu/academics/certificates/">Certificate program</a> in&nbsp; human resource management</li>
+                    <li><a href="http://caps.bethel.edu/locations/">Convenient locations</a> throughout the greater Twin Cities region</li>
+                </ul>
+                <h3>Bethel Seminary</h3>
+                <ul>
+                    <li><a href="http://seminary.bethel.edu/academics">Graduate programs</a> in dozens of theological, pastoral, and leadership concentrations</li>
+                    <li>SemPM, an evening seminary program for working adults</li>
+                    <li><a href="http://seminary.bethel.edu/academics/delivery-options/distance-learning">InMinistry distance learning program</a>, one of the most successful seminary distance learning programs in the country</li>
+                    <li><a href="http://www.bethel.edu/seminary/about/locations">Seminary locations</a> in St. Paul and San Diego</li>
+                </ul>
+                <h2>Athletics</h2>
+                <p>The <a href="http://athletics.bethel.edu">Bethel Royals</a> field 18 NCAA Division III varsity sports in the <a href="http://www.miac-online.org/">Minnesota Intercollegiate Athletic Conference (MIAC)</a>
+                </p>
+                <table border="0">
+                    <tbody>
+                        <tr>
+                            <td><strong>Men's Teams</strong>
+                            </td>
+                            <td><strong>Women's Teams</strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=baseball&amp;path=baseball">Baseball</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball2&amp;path=wbball">Basketball</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=basketball&amp;path=mbball">Basketball</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry2&amp;path=wcross">Cross Country</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=crosscountry&amp;path=mcross">Cross Country</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf2&amp;path=wgolf">Golf</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=football&amp;path=football">Football</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey2&amp;path=whockey">Hockey</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=golf&amp;path=mgolf">Golf</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer2&amp;path=wsoc">Soccer</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=hockey&amp;path=mhockey">Hockey</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=softball&amp;path=softball">Softball</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=soccer&amp;path=msoc">Soccer</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis2&amp;path=wten">Tennis</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=tennis&amp;path=mten">Tennis</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=track2&amp;path=wtrack">Track and Field</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=track&amp;path=mtrack">Track and Field</a>
+                            </td>
+                            <td><a href="http://athletics.bethel.edu/index.aspx?tab=volleyball&amp;path=wvball">Volleyball</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h2>The Arts</h2>
+                <p>Bethel's musical, theatre, and visual arts are highly respected among Christian colleges. Our <a href="http://cas.bethel.edu/academics/departments/music/">music department</a> fields 11 vocal and instrumental performance groups - jazz, choir, symphony orchestra, even handbells-in the expansive <a href="http://www.bethel.edu/events/arts/venues/benson/index">Benson Great Hall</a>. Plus, our theatre students stage 4 plays annually in the hall or in the intimate Black Box Theatre.</p>
+                <p>We have two art galleries on campus which host exhibitions showcasing the work of nationally and internationally established artists as well as artists in our local communities.</p>
+                <p>Additionally, the Twin Cities' arts community provides opportunities to experience culture firsthand or engage professionally with the arts through internships.</p>
             </div>
+
         </div><!--/#inner-wrap-->
     </div><!--/#outer-wrap-->
 </div>
