--- a/src/templates/partials/global__header.hbs
+++ b/src/templates/partials/global__header.hbs
@@ -3,6 +3,24 @@
         <div class="global__logo">
             <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png"/></a>
         </div>
+
+		<p class="quick-links">
+		<a href="#">Blink</a>
+		<a href="#">News</a>
+		<a href="#">Events</a>
+		<a href="#">Offices</a>
+		<svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg>
+		</p>
+
+{{!--         <form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
+            <fieldset>
+                <input name="cx" type="hidden" value="017681067239267367526:chqo5ugqj90">
+                <input name="ie" type="hidden" value="UTF-8">
+                <input class="search-input" name="q" type="text">
+                <input class="btn search-go" name="sa" type="submit" value="Search">
+            </fieldset>
+        </form> --}}
+
         <a class="burger" href="#toolbox" id="toolbox-open-btn">
             <span class="burger-icon"></span>
             <span class="burger-text">Menu</span>
