--- a/src/templates/partials/global__navigation.hbs
+++ b/src/templates/partials/global__navigation.hbs
@@ -4,11 +4,11 @@
     <nav class="global__navigation" role="navigation">
         <div class="inner">
             <ul>
-                <li><a href="http://www.bethel.edu">
+{{!--                 <li><a href="http://www.bethel.edu">
                         <svg class="svg-icon  home-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg>
                         <span style="display:none">Home</span>
                     </a>
-                </li>
+                </li> --}}
                  <li class="active"> <a href="http://www.bethel.edu/about">About</a></li>
                  <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
                  <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
@@ -20,4 +20,4 @@
             </ul>
         </div>
     </nav>
-</div>
+</div> 
