--- a/src/scss/base/_fluidity.scss
+++ b/src/scss/base/_fluidity.scss
@@ -43,3 +43,9 @@ textarea {
     width: 100%;
     z-index: 100;
 }
+
+.image--round {
+  border-radius: 50%;
+  overflow:hidden;
+  line-height: 0;
+}
