--- a/src/scss/enhance/_buttons.scss
+++ b/src/scss/enhance/_buttons.scss
@@ -59,8 +59,11 @@
   padding-right: 1em;/* [7] */
   padding-left: 1em;/* [7] */
   border-radius: .4em;/* [8] */
-  background: #0069aa;
-  color: #fff; }
+  
+  background: $bethel--blue;
+  font-family: $gotham;
+  color: #fff; 
+}
 
 .btn, .btn:hover {
   text-decoration: none;/* [9] */ }
