--- a/src/scss/typography/_typography.scss
+++ b/src/scss/typography/_typography.scss
@@ -1,8 +1,48 @@
+body {
+  // background-color: white;
+  // font-family: 'Lato', serif;
+  // font-weight: 300;
+  line-height: 1.5;
+  color: #555;
+  // font-family: $gotham;
+  // font-family: $sentinel;
+  // font-size: 90%;
+}
+
+// p {margin-bottom: 1.3em;}
+
+h1, h2, h3, h4 {
+  margin: 1.414em 0 0.5em;
+  font-weight: inherit;
+  line-height: 1.2;
+}
+
+h1 {
+  // margin-top: 0;
+  font-size: 1.602em;
+}
+
+h2 {font-size: 1.424em;}
+
+h3 {font-size: 1.266em;}
+
+h4 {font-size: 1.125em;}
+
+h1 + p,
+h2 + p,
+h3 + p,
+h4 + p {
+	// background: red;
+	margin-top: 0;
+}
+
+small, .font_small {font-size: 0.889em;}
+
 
 body {
-	line-height: 1.7;
-	font-family: $sentinel-ssm;
-	font-weight: 300;
+	// line-height: 1.7;
+	font-family: georgia, serif;
+	// font-weight: 300;
 }
 
 h1, .h1,
@@ -13,14 +53,15 @@ h5, .h5,
 h6, .h6 {
 	font-family: $gotham;
 	font-weight: 500;
-	color: #333;
+	// color: #666;
+	// color: $bethel--blue;
 }
 
 h1,
 h2,
 h3 {
-	line-height: 1.2;
-	margin-bottom: 0;
+	// line-height: 1.2;
+	// margin-bottom: 0;
 }
 
 p:first-child {
