--- a/src/scss/enhance/_off-canvas.scss
+++ b/src/scss/enhance/_off-canvas.scss
@@ -21,6 +21,7 @@
   background: #fff;
   position: absolute;
   margin-top: 2em;
+  margin-bottom: 2em;
   font-family: $gotham;
   // font-weight: 300;
 
