--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -23,9 +23,10 @@
 
 "school/school__navigation",
 
-"site/site-title",
-"site/site-navigation",
-"site/site-features",
+"site/site__title",
+"site/site__navigation",
+"site/site__features",
+"site/site__social-media",
 
 "page/page__title",
 
