--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -10,7 +10,7 @@ layout:default.hbs
 {{!-- <a data-scroll href="#bazinga">Anchor Link</a> --}}
 
 {{> global__header }}
-{{> global__navigation }}
+{{!-- {{> global__navigation }} --}}
 {{> school__navigation }}
 {{> site__title }}
 {{!-- {{> page__title }} --}}
