--- a/src/scss/global/_footer.scss
+++ b/src/scss/global/_footer.scss
@@ -22,6 +22,8 @@
     h1, h2, h3, h4, h5, h6 {
         color: #ffc600;
         font-size: 100%; 
+        margin-top: 0;
+        margin-bottom: .5em;
     }
 
     address {
