--- a/src/scss/grid/_flex-grid.scss
+++ b/src/scss/grid/_flex-grid.scss
@@ -101,11 +101,13 @@ $add-legacy-support: false !default;
 .grid--wrap .grid-cell:first-child {margin-left: 0;}
 .grid--wrap .grid-cell:last-child {margin-right: 0; flex-grow: 0}
 
-// .grid > .grid {
-//     & > .grid-cell {
-//         display: flex;
-//     }
-// }
+// These rules remove the top margin of heading when it is the first in
+// a grid-cell to make content top-aligned
+.grid-cell h2:first-of-type,
+.grid-cell h3:first-of-type,
+.grid-cell h4:first-of-type {
+  margin-top: 0;
+}
 
 
 
@@ -148,11 +150,11 @@ $add-legacy-support: false !default;
     @if $name == "" {
         $sep: "";
     }
-    .#{$name}#{$sep}grid--fit > .grid-cell {flex: 1;}
-    .#{$name}#{$sep}grid--full > .grid-cell {flex: 0 0 100%;}
-    .#{$name}#{$sep}grid--1-2 > .grid-cell {flex: 0 0 50%;}
-    .#{$name}#{$sep}grid--1-3 > .grid-cell {flex: 0 0 33.3333%;}
-    .#{$name}#{$sep}grid--1-4 > .grid-cell {flex: 0 0 25%;}
+    .#{$name}#{$sep}grid--fit > .grid-cell {flex-basis: 1;}
+    .#{$name}#{$sep}grid--full > .grid-cell {flex-basis: 100%;}
+    .#{$name}#{$sep}grid--1-2 > .grid-cell {flex-basis: 50%;}
+    .#{$name}#{$sep}grid--1-3 > .grid-cell {flex-basis: 33.3333%;}
+    .#{$name}#{$sep}grid--1-4 > .grid-cell {flex-basis: 25%;}
 }
 
 // Build the grid system
