--- a/src/templates/partials/global__header.hbs
+++ b/src/templates/partials/global__header.hbs
@@ -4,13 +4,7 @@
             <a href="http://www.bethel.edu"><img alt="Bethel University" src="//cdn1.bethel.edu/dev/images/logo-white.png"/></a>
         </div>
 
-		<p class="quick-links">
-		<a href="#">Blink</a>
-		<a href="#">News</a>
-		<a href="#">Events</a>
-		<a href="#">Offices</a>
-		<svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg>
-		</p>
+
 
 {{!--         <form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
             <fieldset>
@@ -27,3 +21,46 @@
         </a>
     </div>
 </div>
+
+<div class="global__toolbox" id="toolbox">
+    <a class="global__toolbox__close-btn" id="global__toolbox__close-btn" href="#top">✖ close</a>
+    
+    <nav class="global__navigation" role="navigation">
+        <div class="inner">
+            <ul>
+{{!--                 <li><a href="http://www.bethel.edu">
+                        <svg class="svg-icon  home-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg>
+                        <span style="display:none">Home</span>
+                    </a>
+                </li> --}}
+                 <li class="active"> <a href="http://www.bethel.edu/about">About</a></li>
+                 <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
+                 <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
+                 <li><a href="http://cas.bethel.edu/student-life/">Student Life</a></li>
+                 <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
+                 <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
+                 <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
+                 <li><a href="http://www.bethel.edu/giving/">Giving</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="quick-links">
+    	<ul>
+			<li><a href="#">Blink</a></li>
+			<li><a href="#">News</a></li>
+			<li><a href="#">Events</a></li>
+			<li><a href="#">Offices</a></li>
+		</ul>
+	</div>
+
+			<form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
+	            <fieldset>
+	                <input name="cx" type="hidden" value="017681067239267367526:chqo5ugqj90">
+	                <input name="ie" type="hidden" value="UTF-8">
+	                <input class="search-input" name="q" type="text">
+	                <input class="btn search-go" name="sa" type="submit" value="Search">
+	            </fieldset>
+	        </form>
+	        {{!-- <svg class="svg-icon  search-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#search"></use></svg> --}}
+</div> 
